@@ -19,6 +19,8 @@ def register():
         Bank,
         BankAccountNumber,
         InvoiceLine,
+        Journal,
+        MoveLine,
         # Test case
         TestCaseModel,
         Configuration,
