@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='sepa_receivable_flavor']" position="after">
+        <label name="last_sepa_receivable_payment_creation_date"/>
+        <field name="last_sepa_receivable_payment_creation_date"/>
+    </xpath>
+</data>
