@@ -1,3 +1,4 @@
+* Calculate payment date based on previous payment sent
 * Add payments creation wizard
 * Manage manual reject payment processus
 * Allow to configure payment fail action accoding number of retry
